--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                 <font color= "yellow">I can help you build a product, feature or website. 
                 <p>Look through my some of my work and <em>experience</em>!.</p>
                 <p> you like what you see and have a project you need coded,</p>
-                <p>hestitate to contact <strong><a href="https://www.facebook.com/chuks.odswillxxxx">Obed</a></strong></font></p> 
+                <p>hestitate to <font color="green">Contact</font> <strong><a href="https://www.facebook.com/chuks.odswillxxxx">Obed</a></strong></font></p> 
 
             </div>
             
